# cs-simulation

./: .gitignore  README.md  pyproject.toml  test1.ipynb  test2.ipynb  test3.ipynb
src/: contracts.py  generators.py  test.py  utils.py
